ordsprod_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ords-nondev-sidb23c
  namespace: sidb23c
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: ords-nondev-sidb23c
      app.kubernetes.io/name: ords-nondev
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: ords-nondev-sidb23c
        app.kubernetes.io/name: ords-nondev
    spec:
      containers:
      - image: fra.ocir.io/frul1g8cgfam/pub_ords:24.3.0-graal
        imagePullPolicy: IfNotPresent
        name: app
        ports:
        - containerPort: 8181
          name: http-ords
          protocol: TCP
        volumeMounts:
        - mountPath: /etc/ords/config
          name: config
      volumes:
      - name: scripts
        configMap:
          defaultMode: 420
          name: ords-init-config
      - name: config
        emptyDir: {}
