sqlplus_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: instantclient
    app.kubernetes.io/name: instantclient-sqlplus
  name: instantclient-sqlplus
  namespace: 23aidemo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: instantclient
      app.kubernetes.io/name: instantclient-sqlplus
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: instantclient
        app.kubernetes.io/name: instantclient-sqlplus
    spec:
      containers:
      - name: app
        image: fra.ocir.io/frul1g8cgfam/pub_instantclient_sqlplus:23.4.0_novnc
        imagePullPolicy: Always
        name: app
        ports:
        - containerPort: 8080
          name: console
          protocol: TCP
        volumeMounts:
        - mountPath: /projects
          name: storage
      securityContext:
        fsGroup: 54322
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: sqlcl-pvc
        - name: scripts
          configMap:
            defaultMode: 420
            name: sqlplus-scripts-config
