cdb_ords_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: 23aicdb-ords
  namespace: 23aidemo
spec:
  selector:
    name: 23aicdb-ords
  sessionAffinity: None
  type: ClusterIP
