ords_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ords-sidb23c
  namespace: sidb23c
spec:
  ports:
  - name: http-ords
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/instance: ords-sidb23c
    app.kubernetes.io/name: ords
  type: ClusterIP
