sqlplus_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: instantclient-sqlcl-liquibase
  namespace: 23aidemo
spec:
  ports:
  - name: console
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/instance: instantclient
    app.kubernetes.io/name: sqlcl-liquibase
  type: ClusterIP
