testapp_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cmpdemoapp
  name: cmpdemoapp-deployment
  namespace: oracle-database-operator-system
spec:
  ports:
  - name: tcp-cmpdemoapp-container-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: cmpdemoapp
  sessionAffinity: None
  type: LoadBalancer
